--- a/ngapp-prueba/src/styles.scss
+++ b/ngapp-prueba/src/styles.scss
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+@import "../node_modules/primeng/resources/primeng.css";
+@import "../node_modules/primeflex/primeflex.css";
+@import "../node_modules/primeng/resources/themes/lara-light-blue/theme.css";
+
+html,
+body {
+  font-size: 10px;
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+}
