--- a/ngapp-prueba/src/app/home/home.component.html
+++ b/ngapp-prueba/src/app/home/home.component.html
@@ -1,1 +1,5 @@
-<app-header class="w-screen"></app-header>
+<div class="header-main flex flex-column">
+  <app-header class="w-screen"></app-header>
+  <app-main class="h-full"></app-main>
+  <app-footer></app-footer>
+</div>
